--- a/object_tools/templates/object_tools/inclusion_tags/object_tools.html
+++ b/object_tools/templates/object_tools/inclusion_tags/object_tools.html
@@ -1,3 +1,9 @@
 {% for object_tool in object_tools %}
-<li><a href="{{ object_tool.reverse }}{% if request %}?{{ request.GET.urlencode }}{% endif %}" title="{{ object_tool.help_text }}"class="historylink">{{ object_tool.label }}</a></li>
+
+  {% if object_tool.template %}
+    {% include object_tool.template with object_tool=object_tool %}
+  {% else %}
+    <li><a href="{{ object_tool.reverse }}{% if request %}?{{ request.GET.urlencode }}{% endif %}" title="{{ object_tool.help_text }}"class="historylink">{{ object_tool.label }}</a></li>
+  {% endif %}
+
 {% endfor %}
